force-app/main/default/objects/Animal__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>