force-app/main/default/objects/Animal__c/fields/Breeder__c.field-meta.xml
<CustomField>
    <fullName>Breeder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Breeder</label>
    <referenceTo>Breeder__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>