force-app/main/default/objects/Animal__c/fields/Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival__c</fullName>
    <description>Date the animal arrived.</description>
    <label>Date of Arrival</label>
    <required>true</required>
    <type>Date</type>
</CustomField>