force-app/main/default/objects/Animal__c/fields/For_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>For_Sale_Price__c</fullName>
    <description>The price a customer pays to buy the animal.</description>
    <label>For Sale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>