force-app/main/default/objects/Animal__c/fields/Injuries__c.field-meta.xml
<CustomField>
    <fullName>Injuries__c</fullName>
    <label>Injuries</label>
    <type>TextArea</type>
</CustomField>