force-app/main/default/objects/Animal__c/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <label>Medical Conditions</label>
    <type>TextArea</type>
</CustomField>