force-app/main/default/objects/Animal__c/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this animal been sold.</description>
    <label>Sold</label>
    <type>Checkbox</type>
</CustomField>