force-app/main/default/objects/Animal__c/recordTypes/Healthy_Animals.recordType-meta.xml
<RecordType>
    <fullName>Healthy_Animals</fullName>
    <active>true</active>
    <label>Healthy Animals</label>
</RecordType>