force-app/main/default/objects/Animal__c/recordTypes/Special_Needs.recordType-meta.xml
<RecordType>
    <fullName>Special_Needs</fullName>
    <active>true</active>
    <description>This record type is for animals with special needs.</description>
    <label>Special Needs</label>
</RecordType>