force-app/main/default/objects/Animal__c/validationRules/Price_Under_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Under_Cost</fullName>
    <active>true</active>
    <description>Price of an animal should never be below the cost.</description>
    <errorConditionFormula>For_Sale_Price__c &lt;  Cost__c</errorConditionFormula>
    <errorDisplayField>For_Sale_Price__c</errorDisplayField>
    <errorMessage>The price of an animal should never be below cost.</errorMessage>
</ValidationRule>